# sqout

./: .env.example  .gitignore  README.md  pyproject.toml  sqout-spec.md
.github/workflows/: pages.yml  sqout-run.yml
config/: sqout.yaml
docs/: _config.yml  briefs.md  index.md
docs/_layouts/: brief.html
docs/assets/: main.js  style.css
src/sqout/: brief.py  config.py  connect.py  corpus.py  filter.py  llm.py  openalex.py  rank.py  run.py  scirate.py  scout.py  serve.py  store.py  summarize.py
tests/: conftest.py  test_brief.py  test_cli.py  test_connect_stub_records.py  test_corpus.py  test_openalex.py  test_rank.py  test_scout.py  test_stages.py  test_store.py
