[project]
name = "sqout"
version = "0.1.0"
description = "A daily arXiv scout that briefs you on the papers that matter"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1",
    "anthropic>=0.69",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sqout = "sqout.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
